# agentic-ai

./: .gitignore  LESSONS.md  README.md  pyproject.toml  requirements.txt
1 - Prompting for Effective LLM Reasoning and Planning/Applying CoT and ReACT/: lesson-1-role-based-prompting.ipynb  lesson-2-chain-of-thought-and-react-prompting-part-i.ipynb  lesson_2_lib.py
1 - Prompting for Effective LLM Reasoning and Planning/Role of Promting in Agentic AI/: introduction-to-prompting-for-llm-reasoning-and-planning.ipynb
1 - Prompting for Effective LLM Reasoning and Planning/exercises/: introduction-to-prompting-for-llm-reasoning-and-planning.ipynb  lesson-1-role-based-prompting.ipynb  lesson-2-chain-of-thought-and-react-prompting-part-ii.ipynb  lesson-3-prompt-instruction-refinement.ipynb  lesson-4-chaining-prompts-for-agentic-reasoning.ipynb  lesson-5-implementing-llm-feedback-loops.ipynb  lesson_2_lib.py
1 - Prompting for Effective LLM Reasoning and Planning/project/: agentsville_trip_planner.ipynb  models.py  test.py  utils.py
Course 1 - Lesson 2/: introduction-to-prompting-for-llm-reasoning-and-planning.ipynb
