[project]
name = "agentic-ai"
version = "0.1.0"
description = "A repo for experimenting with Agentic AI and course work from Udacity's Agentic AI Nanodegree"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

